EKS-with-LoadBalancer-Controller/eks-Ingress-Context-Path-Routing/kube-manifests-ingress-cpr/01-Nginx-App1-Deployment-and-NodePortService.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: app1-nginx-deployment
  labels: 
    app: app1-nginx
spec:
  replicas: 1
  selector:
   matchLabels:
     app: app1-nginx
  template:
    metadata:
     labels:
       app: app1-nginx
    spec:
      containers:
        - name: app1-nginx
          image: stacksimplify/kube-nginxapp1:1.0.0
          ports: 
           - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-nginx-nodeport-service
  labels: 
    app: app1-nginx
  annotations:
  #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets 
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:  
  Type: NodePort  
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
