EKS-with-LoadBalancer-Controller/eks-Ingress-Context-Path-Routing/kube-manifests-ingress-cpr/03-Nginx-App1-Deployment-and-NodePortService.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: app3-nginx-deployment
   labels:
     app: app3-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3-nginx
  template:
    metadata:
      labels:
        app: app3-nginx
    spec:
      containers:
        - name: app3-nginx
          image: "stacksimplify/kubenginx:1.0.0"
      ports:  
        - containerPort: 80  


---
apiVersion: v1
kind: Service
metadata:
  name: app3-nginx-nodeport-service
  labels:
    app: app3-nginx
  annotations:
      alb.ingress.kubernetes.io/healthcheck-path: /index.html
spec:
  selector:
     app: app3-nginx
  ports:
    - port: 80
      targetPort: 80
  Type: "NodePort"
